# FragilityIndex

./: .env.example  .gitignore  Makefile  README.md  config.example.toml  prompt.txt  pyproject.toml
.github/workflows/: publish-pages.yaml
docs/: index.html  summary.json  timeseries.csv
docs/archive/: 2026-01-17.html  2026-01-23.html  2026-01-30.html  2026-02-27.html  2026-03-13.html  2026-03-27.html
src/fragility_monitor/: __init__.py  cli.py  config.py  monitor.py
src/fragility_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fragility_monitor/api/: server.py
src/fragility_monitor/data/: cache.py  normalize.py
src/fragility_monitor/data/fetchers/: fred.py  interfaces.py  sec_edgar.py  stooq.py
src/fragility_monitor/features/: divergence.py  market.py  narrative.py
src/fragility_monitor/report/: explain.py  html.py
src/fragility_monitor/report/templates/: report.html
src/fragility_monitor/scoring/: backtest.py  components.py  composite.py  transforms.py
tests/: test_components.py  test_report_explain.py  test_stooq_fetcher.py  test_transforms.py
